--- a/Mao na Massa - Layout Flex/estilos.css
+++ b/Mao na Massa - Layout Flex/estilos.css
@@ -1,3 +1,4 @@
+/* Definições gerais - Inicio */
 html {
     height: 100%;
 }
@@ -8,13 +9,8 @@ li,
 p {
     margin: 0px;
     padding: 0px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.header a {
-    text-decoration: none;
-    color: white;
 }
 
 h1 {
@@ -25,6 +21,15 @@ h1 {
 img {
     max-width: 100%;
     display: block;
+}
+
+/* Definições gerais - Fim */
+
+/* CSS Cabeçalho - Inicio */
+
+.header a {
+    text-decoration: none;
+    color: white;
 }
 
 .header {
@@ -45,6 +50,10 @@ img {
     margin-left: 10px;
 }
 
+/* CSS Cabeçalho - Fim */
+
+/* CSS Rodapé - Inicio */
+
 .footer {
     background: #727272;
     color: white;
@@ -54,3 +63,21 @@ img {
     align-items: center;
     padding: 20px;
 }
+
+/* CSS Rodapé - Fim */
+
+/* CSS Flexbox 1 - Inicio */
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.flex>div {
+    flex: 1 1 200px;
+    margin: 10px;
+}
+
+/* CSS Flexbox 1 - Fim */
