--- a/Mao na Massa - Menu Mobile/estilos.css
+++ b/Mao na Massa - Menu Mobile/estilos.css
@@ -98,9 +98,13 @@ img {
         top: 0px;
         left: 0px;
         width: 100%;
-        height: 100%;
+        height: 0%;
         background: rgba(0, 0, 0, 0.7);
         overflow: hidden;
+        -webkit-transition: height 0.3s;
+        -moz-transition: height 0.3s;
+        -o-transition: height 0.3s;
+        transition: height 0.3s;
     }
 
     .menu li {
@@ -114,6 +118,42 @@ img {
         display: block;
         text-align: center;
         width: 100%;
+    }
+
+    .menu-icon {
+        display: block;
+        color: white;
+        width: 50px;
+        height: inherit;
+        position: absolute;
+        top: 15px;
+        right: 30px;
+        line-height: 60pxs;
+        z-index: 999;
+    }
+
+    .menu-icon i {
+        font-size: 1.7em;
+    }
+
+    #menuToggle:checked~label i:nth-child(2) {
+        display: block;
+    }
+
+    #menuToggle:checked~label i:first-child {
+        display: none;
+    }
+
+    #menuToggle:not(checked)~label i:first-child {
+        display: block;
+    }
+
+    #menuToggle:not(checked)~label i:nth-child(2) {
+        display: none;
+    }
+
+    #menuToggle:checked~ul {
+        height: 100%;
     }
 }
 
