Aula: "Videoaula - Mão na Massa - Grid 2 / 4"

--- a/Bootstrap Grid/estilos.css
+++ b/Bootstrap Grid/estilos.css
@@ -1,9 +1,3 @@
-.cor1 {
-    background: red;
-    min-height: 200px;
-}
-
-.cor2 {
-    background: green;
-    min-height: 200px;
+.logo {
+    max-width: 200px;
 }
