--- a/Bootstrap Grid/estilos.css
+++ b/Bootstrap Grid/estilos.css
@@ -1,3 +1,78 @@
+.header {
+    background-image: url(imagens/bg1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px -250px;
+    color: white;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.menu1 {
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    margin-left: -350px;
+}
+
+.menu1 a {
+    color: white;
+}
+
 .logo {
-    max-width: 200px;
+    max-width: 150px;
+}
+
+.banner img {
+    max-width: 100%;
+}
+
+.banner {
+    margin: 0px;
+}
+
+.texto_principal {
+    background: #e4e3e3;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.texto_principal h1 {
+    color: #682c14;
+}
+
+.card_area>div {
+    margin-bottom: 10px;
+}
+
+.card_area img {
+    width: 100%;
+}
+
+.infos {
+    margin-top: 20px;
+}
+
+.infos h1 {
+    font-size: 1.4em;
+}
+
+.grid_cor1 {
+    background: #f7f1ea;
+    padding: 20px;
+    min-height: 220px;
+    margin-bottom: 20px;
+}
+
+.grid_cor1 img {
+    width: 100%;
+}
+
+.footer {
+    background-image: url(imagens/bg1.jpg);
+    background-size: cover;
+    background-position: 0px -250px;
+    color: white;
+    padding: 20px;
 }
