Aula: "Videoaula - Mão na Massa - Componentes 3 / 4"

--- a/Bootstrap Componentes/estilos.css
+++ b/Bootstrap Componentes/estilos.css
@@ -29,12 +29,16 @@
     width: 150px;
 }
 
-.main {
-    background: blue;
+.main .card {
+    margin-bottom: 15px;
+}
+
+.main_area {
+    margin-bottom: 20px;
 }
 
 .footer {
-    margin-top: 20px;
+    margin-top: 10px;
     background: rgb(110, 62, 138);
     color: white;
 }
